deployment-zts-cmc-hub.yaml
apiVersion: v1
kind: Pod
metadata:
  name: zts-cmc-hub
spec:
  containers:
  - name: zts-cmc-hub
    image: zettasetimg/test:zts-acm-cli-0.0.2_commitid-55fbea
    ports:
    - containerPort: 8080
    imagePullPolicy: Always
  imagePullSecrets:
    - name: zts-dockerhub-token
