service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zts-cmc-service
spec:
  selector:
    app: zts-cmc
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
