route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: zts-cmc
spec:
  to:
    kind: Service
    name: zts-cmc-service
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
